tests/ui/query-system/query-cycle-printing-issue-151358.rs
//~ ERROR: cycle detected when getting the resolver for lowering
trait Default {}
use std::num::NonZero;
fn main() {
    NonZero();
    format!("{}", 0);
}
